# data-validator

./: .ghci  README.md  data-validator.cabal
src/Data/: Validator.hs
test/: test.hs
