Name:                data-validator
Version:             0.0.3
Synopsis:            A modular, flexible, reusable and context agnostic 
                     data validation library.
License:             BSD3
License-file:        LICENSE
Author:              Ozgun Ataman
Maintainer:          ozataman@gmail.com
Category:            Data
Build-type:          Simple
Cabal-version:       >=1.2


Library
  Exposed-modules:
    Data.Validator
  
  -- Packages needed in order to build this package.
  Build-depends:       
      base >= 4 && < 5
    , bytestring >= 0.9
    , containers
    , mtl >= 2
    , safe
    , transformers >= 0.2.2.0

  Extensions:
      OverloadedStrings
    , NoMonomorphismRestriction

  hs-source-dirs: src, test
  
  -- Modules not exported by this package.
  -- Other-modules:       
  
  -- Extra tools (e.g. alex, hsc2hs, ...) needed to build the source.
  -- Build-tools:         
  
